# nowide

./: CMakeLists.txt  README.md
cmake/: NowideConfig.cmake
nowide/: args.hpp  config.hpp  convert.hpp  cstdio.hpp  cstdlib.hpp  filebuf.hpp  fstream.hpp  iostream.hpp  stackstring.hpp  utf8_codecvt.hpp
nowide/detail/: convert.hpp  utf.hpp
src/: cstdio.cpp  cstdlib.cpp  iostream.cpp
test/: benchmark_fstream.cpp  test.hpp  test_codecvt.cpp  test_convert.cpp  test_env.cpp  test_fs.cpp  test_fstream.cpp  test_iostream.cpp  test_sets.hpp  test_stackstring.cpp  test_stdio.cpp  test_system.cpp
